--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,13 +1,35 @@
 body{
     font-family: url('../font/Roboto-Black.ttf');
+    display: flex;
+    justify-content: center;
 }
 header {
+    width:1440px;
+    height: 150px;
     background-color: black;
     font-size: 26px;
-    color:white
-}
-
-a {
-    text-decoration: none;
     color:white;
+    display: flex;
+    align-items: center;
+
+    nav{
+        margin-left: auto;
+        width: 775px;
+        height: 26px;
+
+        form{
+            display: flex;
+            justify-content: space-between;
+        }
+    }
+    a {
+        text-decoration: none;
+        color:white;
+    }
+
+    div{
+        font-size: 31px;
+        font-family: url('../font/Forum-Regular.ttf');
+        margin-left: 25px;
+    }
 }
