--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,13 +1,22 @@
 body{
-    font-family: url('../font/Roboto-Black.ttf');
+    width: 1920px;
+    font-family: url('../font/Roboto-Regular.ttf');
+    flex-direction: column;
+}
+.style1 {
+    background-color: black; 
     display: flex;
     justify-content: center;
+}
+.radio1{
+    
 }
 header {
     width:1440px;
     height: 150px;
     background-color: black;
-    font-size: 26px;
+    font-size: 22px;
+    font-weight: 200;
     color:white;
     display: flex;
     align-items: center;
@@ -28,8 +37,14 @@ header {
     }
 
     div{
-        font-size: 31px;
+        font-size: 28px;
+        font-weight: 400;
         font-family: url('../font/Forum-Regular.ttf');
         margin-left: 25px;
     }
+}
+
+main{
+    width:1440px;
+    height: 8717px;
 }
