--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 body{
     width: 1920px;
-    font-family: url('../font/Roboto-Regular.ttf');
+    font-family: 'Roboto', sans-serif;
     flex-direction: column;
 }
 .style1 {
@@ -8,9 +9,7 @@ body{
     display: flex;
     justify-content: center;
 }
-.radio1{
-    
-}
+
 header {
     width:1440px;
     height: 150px;
@@ -29,11 +28,14 @@ header {
         form{
             display: flex;
             justify-content: space-between;
+
+            a {
+                text-decoration: none;
+                color:white;
+                line-height: 25.78px;
+                letter-spacing: 2px;
+            }
         }
-    }
-    a {
-        text-decoration: none;
-        color:white;
     }
 
     div{
@@ -41,6 +43,8 @@ header {
         font-weight: 400;
         font-family: url('../font/Forum-Regular.ttf');
         margin-left: 25px;
+        line-height: 30.91px;
+        letter-spacing: 5px;
     }
 }
 
