--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -1,6 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 body {
   width: 1920px;
-  font-family: url("../font/Roboto-Regular.ttf");
+  font-family: "Roboto", sans-serif;
   flex-direction: column;
 }
 
@@ -29,18 +30,24 @@ header nav form {
   display: flex;
   justify-content: space-between;
 }
-header a {
+header nav form a {
   text-decoration: none;
   color: white;
+  line-height: 25.78px;
+  letter-spacing: 2px;
 }
 header div {
   font-size: 28px;
   font-weight: 400;
   font-family: url("../font/Forum-Regular.ttf");
   margin-left: 25px;
+  line-height: 30.91px;
+  letter-spacing: 5px;
 }
 
 main {
   width: 1440px;
   height: 8717px;
+  display: flex;
+  flex-direction: column;
 }/*# sourceMappingURL=style.css.map */
