--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,44 +1,46 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
-body{
+
+body {
     width: 1920px;
     font-family: 'Roboto', sans-serif;
     flex-direction: column;
 }
+
 .style1 {
-    background-color: black; 
+    background-color: black;
     display: flex;
     justify-content: center;
 }
 
 header {
-    width:1440px;
+    width: 1440px;
     height: 150px;
     background-color: black;
     font-size: 22px;
     font-weight: 200;
-    color:white;
+    color: white;
     display: flex;
     align-items: center;
 
-    nav{
+    nav {
         margin-left: auto;
         width: 775px;
         height: 26px;
 
-        form{
+        form {
             display: flex;
             justify-content: space-between;
 
             a {
                 text-decoration: none;
-                color:white;
+                color: white;
                 line-height: 25.78px;
                 letter-spacing: 2px;
             }
         }
     }
 
-    div{
+    div {
         font-size: 28px;
         font-weight: 400;
         font-family: url('../font/Forum-Regular.ttf');
@@ -48,7 +50,9 @@ header {
     }
 }
 
-main{
-    width:1440px;
+main {
+    width: 1440px;
     height: 8717px;
+    display: flex;
+    flex-direction: column;
 }
