--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Forum&display=swap");
 body {
   width: 1920px;
   font-family: "Roboto", sans-serif;
@@ -39,7 +40,7 @@ header nav form a {
 header div {
   font-size: 28px;
   font-weight: 400;
-  font-family: url("../font/Forum-Regular.ttf");
+  font-family: "Forum", serif;
   margin-left: 25px;
   line-height: 30.91px;
   letter-spacing: 5px;
