--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Forum&display=swap');
 
 body {
     width: 1920px;
@@ -6,7 +7,7 @@ body {
     flex-direction: column;
 }
 
-.style1 {
+.style1{
     background-color: black;
     display: flex;
     justify-content: center;
@@ -43,7 +44,7 @@ header {
     div {
         font-size: 28px;
         font-weight: 400;
-        font-family: url('../font/Forum-Regular.ttf');
+        font-family: "Forum", serif;
         margin-left: 25px;
         line-height: 30.91px;
         letter-spacing: 5px;
