--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,13 +6,45 @@ body {
     font-family: 'Roboto', sans-serif;
     flex-direction: column;
 }
-
+.photo1{
+    width: 440px;
+    height: 285px;
+}
 .style1{
     background-color: black;
     display: flex;
     justify-content: center;
 }
 
+.line1{
+    background-color: rgba(113, 7, 7, 1);
+    height: 2px;
+    width: 300px;
+    margin-top: 10px;
+}
+.title2{
+    margin-top: 25px;
+    font-family: "Forum", serif;
+    font-size: 32px;
+    font-weight: 400;
+    line-height: 35.33px;
+    letter-spacing: 5px;
+    color: rgba(0, 0, 0, 1);
+}
+.text1{
+    color: rgba(0, 0, 0, 1);
+    font-weight: 200;
+    margin-top: 10px;
+    font-family: 'Roboto', sans-serif;
+}
+.text2{
+    font-size: 22px;
+    line-height: 25.78px;
+}
+.text3{
+    font-size: 18px;
+    line-height: 21.09px;
+}
 header {
     width: 1440px;
     height: 150px;
