--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -35,7 +35,6 @@ body {
     color: rgba(0, 0, 0, 1);
     font-weight: 200;
     margin-top: 10px;
-    font-family: 'Roboto', sans-serif;
 }
 .text2{
     font-size: 22px;
@@ -44,6 +43,12 @@ body {
 .text3{
     font-size: 18px;
     line-height: 21.09px;
+}
+.text4{
+    font-weight: 300;
+    font-size: 22px;
+    line-height: 38.5px;
+    color:white;
 }
 header {
     width: 1440px;
