--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -57,6 +57,35 @@ body {
     color:white;
     margin-top: 25px;
 }
+.div2{
+    margin-left: 35px;
+}
+.div3{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    height: 26px;
+    margin-top: 25px;
+}
+.div4{
+    font-size: 28px; 
+    font-weight: 700; 
+    line-height: 32.81px;
+}
+.div5{
+    width: 150px;
+    height: 50px;
+    border: 3px solid black;
+    display: flex;
+    align-items: center;
+    margin-top: 19px;
+}
+.text5{
+    font-weight: 400;
+    font-size: 32px;
+    line-height: 37.5px;
+    cursor: pointer;
+}
 header {
     width: 1440px;
     height: 150px;
