--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -104,13 +104,6 @@ header {
         form {
             display: flex;
             justify-content: space-between;
-
-            a {
-                text-decoration: none;
-                color: white;
-                line-height: 25.78px;
-                letter-spacing: 2px;
-            }
         }
     }
 
@@ -129,4 +122,16 @@ main {
     height: 8717px;
     display: flex;
     flex-direction: column;
+}
+
+footer{
+    font-size: 22px;
+    font-weight: 200;
+    color: white;
+}
+a {
+    text-decoration: none;
+    color: white;
+    line-height: 25.78px;
+    letter-spacing: 2px;
 }
