--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,11 +1,44 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Forum&display=swap');
 
-body {
-    width: 1920px;
-    font-family: 'Roboto', sans-serif;
+
+$font-forum: "Forum", serif;
+$font-roboto: 'Roboto', sans-serif;
+$main-width: 1920px;
+$second-width: 1440px;
+$color-red: rgba(113, 7, 7, 1);
+
+
+%flex-column{
+    display: flex;
     flex-direction: column;
 }
+%flex-spase-between-G{
+    display: flex;
+    justify-content: space-between;
+}
+%flex-center-G{
+    display: flex; justify-content: center;
+}
+%flex-center-V{
+    display: flex;
+    align-items: center;
+}
+%radio-look1 {
+    width: 16px;
+    height: 16px;
+}
+%radio-look0{
+    width: 12px;
+    height: 12px;
+    border-radius: 6px;
+}
+%text1{
+    color: rgba(0, 0, 0, 1);
+    font-weight: 200;
+    margin-top: 10px;
+}
+
 .photo1{
     width: 440px;
     height: 285px;
@@ -14,42 +47,39 @@ body {
     background-color: black;
     display: flex;
     justify-content: center;
-    width: 1920px;
+    width: $main-width;
 }
 .phTop{
     margin-top: 24px;
 }
 .flexBeetween{
-    display: flex;
-    justify-content: space-between;
+    @extend %flex-spase-between-G;
 }
+
 .line1{
-    background-color: rgba(113, 7, 7, 1);
+    background-color: $color-red;
     height: 2px;
     width: 300px;
     margin-top: 10px;
 }
 .title2{
     margin-top: 25px;
-    font-family: "Forum", serif;
+    font-family: $font-forum;
     font-size: 32px;
     font-weight: 400;
     line-height: 35.33px;
     letter-spacing: 5px;
     color: rgba(0, 0, 0, 1);
 }
-.text1{
-    color: rgba(0, 0, 0, 1);
-    font-weight: 200;
-    margin-top: 10px;
-}
 .text2{
     font-size: 22px;
     line-height: 25.78px;
+    @extend %text1;
 }
 .text3{
     font-size: 18px;
     line-height: 21.09px;
+    @extend %text1;
 }
 .text4{
     font-weight: 300;
@@ -62,9 +92,8 @@ body {
     margin-left: 35px;
 }
 .div3{
-    display: flex;
+    @extend %flex-center-V;
     flex-direction: row;
-    align-items: center;
     height: 26px;
     margin-top: 25px;
 }
@@ -77,9 +106,8 @@ body {
     width: 150px;
     height: 50px;
     border: 3px solid black;
-    display: flex;
-    align-items: center;
     margin-top: 19px;
+    @extend %flex-center-V;
 }
 .text5{
     font-weight: 400;
@@ -87,15 +115,88 @@ body {
     line-height: 37.5px;
     cursor: pointer;
 }
+.icon{
+    width: 48px;
+    height: 48px;
+}
+.divTopF{
+    margin-top: 25px;
+}
+.radio1{
+    opacity: 0;
+    position: absolute;
+}
+.radio-look{
+    @extend %radio-look1;
+    background-color: white;
+}
+.radio-look2{
+    @extend %radio-look1;
+    background-color: rgba(210, 177, 131, 1);
+}
+.radio-look3{
+    @extend %radio-look0;
+    background-color: rgba(153, 153, 153, 1);
+}
+.radio-look4{
+    @extend %radio-look0;
+    background-color: rgba(51, 51, 51, 1);
+}
+.title{
+    font-family: $font-forum;
+    font-size: 80px;
+    font-weight: 400;
+    line-height: 90px;
+    letter-spacing: 5px;
+}
+.radio-style2{
+    width: 17px;
+    height: 17px;
+    accent-color: black;
+}
+.background-div{
+    background-color: black; 
+    width: 1920px; 
+    position: absolute;
+}
+.line2{
+    width: $second-width; 
+    height: 3px; 
+    background-color: $color-red;
+    margin-top: 25px;
+}
+.mt-75{
+    margin-top: 75px;
+}
+.mt-25{
+    margin-top: 25px;
+}
+.frame{
+    width: 452px;
+    height: 254px;
+}
+.w-h-1{
+    width: 456px;
+    height: 570px; 
+}
+.w-h-2{
+    width: 456px;
+    height: 456px;
+}
+
+body {
+    width: $main-width;
+    font-family: $font-roboto;
+    @extend %flex-column;
+}
 header {
-    width: 1440px;
+    width: $second-width;
     height: 150px;
     background-color: black;
     font-size: 22px;
     font-weight: 200;
     color: white;
-    display: flex;
-    align-items: center;
+    @extend %flex-center-V;
 
     img{
         width: 49px;
@@ -108,103 +209,127 @@ header {
         height: 26px;
 
         form {
-            display: flex;
-            justify-content: space-between;
+            @extend %flex-spase-between-G;
+            font-family: $font-roboto;
+            font-weight: 200;
         }
     }
 
     div {
         font-size: 28px;
         font-weight: 400;
-        font-family: "Forum", serif;
+        font-family: $font-forum;
         margin-left: 25px;
         line-height: 30.91px;
         letter-spacing: 5px;
     }
 }
-
 main {
-    width: 1440px;
+    width: $second-width;
     height: 8717px;
-    display: flex;
-    flex-direction: column;
-}
-
-#f1{
-    font-size: 22px;
-    font-weight: 200;
-    color: white;
-    height: 268px; 
-    display: flex; 
-    justify-content: space-between; 
-    margin-top: 87px;
-    width: 1440px;
-}
-#f2{
-    height: 74px;
-    width: 1440px;
-    background-color: black;
-    padding-left: 240px;
-    padding-right: 240px;
-    padding-top: 47px;
-    color: white;
-    display: flex; 
-    justify-content: space-between;
-    letter-spacing: 2px;
-    line-height: 22px;
-    font-size: 22px;
-    font-weight: 200;
+    @extend %flex-column;
 }
 a {
     text-decoration: none;
     color: white;
     line-height: 25.78px;
-}
-.icon{
-    width: 48px;
-    height: 48px;
+    letter-spacing: 2px;
 }
 
-.divTopF{
-    margin-top: 25px;
-}
 
-.radio1{
-    opacity: 0;
-    position: absolute;
+#foot1{
+    font-size: 22px;
+    font-weight: 200;
+    color: white;
+    height: 268px; 
+    margin-top: 87px;
+    width: 1440px;
+    @extend %flex-spase-between-G;
 }
-.radio-look{
-    width: 16px;
-    height: 16px;
-    background-color: white;
+#foot2{
+    height: 74px;
+    width: $second-width;
+    background-color: black;
+    padding-left: 240px;
+    padding-right: 240px;
+    padding-top: 47px;
+    color: white;
+    letter-spacing: 2px;
+    line-height: 22px;
+    font-size: 22px;
+    font-weight: 200;
+    @extend %flex-spase-between-G;
 }
-.radio-look2{
-    width: 16px;
-    height: 16px;
-    background-color: rgba(210, 177, 131, 1);
+#d1, #d6{
+    @extend %flex-center-G;
 }
-.radio-look0{
-    width: 12px;
-    height: 12px;
-    border-radius: 6px;
+#d2{
+    position: absolute; 
+    background-color: black; 
+    width: 600px; 
+    height: 120px;
+    margin-left: 840px;
+    margin-top: 690px;
+    @extend %flex-spase-between-G;
+    @extend %flex-center-V;
 }
-.radio-look3{
-    background-color: rgba(153, 153, 153, 1);
-    ;
-}
-.radio-look4{
-    background-color: rgba(51, 51, 51, 1);
-}
-.title{
-    font-family: "Forum", serif;
-    font-size: 80px;
+#d3{
+    font-size: 22px; 
     font-weight: 400;
-    line-height: 90px;
-    letter-spacing: 5px;
+    line-height: 40px;
+    width: 76px; 
+    height: 40px;
+    margin-left: 74px;
+    @extend %flex-spase-between-G;
 }
-
-.radio-style2{
-    width: 17px;
-    height: 17px;
-    accent-color: black;
+#f1{
+    width: 180px; 
+    height: 16px;
+    @extend %flex-spase-between-G;
+    margin-bottom: 85px;
+}
+#d4{
+    font-size: 28px; 
+    font-weight: 300; 
+    margin-top: 25px;
+    line-height: 32.81px;
+    letter-spacing: 2px;
+}
+#d5{
+    margin-top: 75px; 
+    position: absolute; 
+    @extend %flex-spase-between-G;
+    width: $second-width;
+}
+#d7{
+    margin-left: 240px;
+    @extend %flex-column;      
+    width: 150px;
+}
+#b1{
+    background-color: $color-red; 
+    width: 360px; 
+    height: 75px; 
+    border: 1px solid $color-red;
+    border-radius: 9px; 
+    color:white;
+    font-size: 22px;
+    font-weight: 300;
+    margin-top: 75px;
+    line-height: 25.78px;
+    letter-spacing: 2px;
+}
+#b2{
+    background-color: black; 
+    color:white;
+    width: 175;
+    height: 50px;
+    margin-top: 52px;
+}
+#d8{
+    font-family: $font-forum;
+    font-weight: 400;
+    font-size: 28px;
+    line-height: 30.91px;
+    letter-spacing: 5px;
 }
