--- a/src/scss/booking_style.css
+++ b/src/scss/booking_style.css
@@ -1,13 +1,39 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Forum&display=swap");
+body #d1 {
+  display: flex;
+  justify-content: space-between;
+}
+
 body {
   height: 845px;
   width: 1440px;
   display: flex;
   justify-content: center;
   align-items: center;
+  font-family: "Roboto", sans-serif;
 }
-body div {
+body #d1 {
   height: 663px;
   width: 970px;
+}
+body #d1 img {
+  width: 85px;
+  height: 41px;
+}
+
+#title {
+  font-family: "Forum", serif;
+  font-size: 50px;
+  font-weight: 400;
+  line-height: 55.2px;
+  color: rgb(157, 134, 101);
+}
+
+#d2 {
+  margin-top: 15px;
+  color: rgb(113, 7, 7);
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21.09px;
 }/*# sourceMappingURL=booking_style.css.map */
