--- a/src/scss/booking_style.scss
+++ b/src/scss/booking_style.scss
@@ -7,6 +7,7 @@ $font-roboto: 'Roboto', sans-serif;
 $color-gold: rgba(157, 134, 101, 1);
 $color-red: rgba(113, 7, 7, 1);
 $color-black-1: rgba(3, 3, 3, 1);
+$color-grey: rgba(164, 164, 163, 1);
 
 %flex-spase-between-G{
     display: flex;
@@ -35,6 +36,16 @@ $color-black-1: rgba(3, 3, 3, 1);
     font-size: 20px;
     cursor: pointer;
 }
+.b2{
+    background-color: $color-black-1;
+    width: 32px;
+    height: 20px;
+    border-radius: 6px;
+    display: flex;
+    justify-content: center;
+    color: $color-grey;
+    @extend %font;
+}
 .block{
     width: 35px;
     height: 25px;
@@ -43,6 +54,39 @@ $color-black-1: rgba(3, 3, 3, 1);
     display: flex;
     align-items: center;
     justify-content: center;
+}
+.size1{
+    width: 15px;
+    height: 15px;
+}
+.font2{
+    margin-left: 10px;
+    font-weight: 300;
+}
+.font3{
+    font-weight: 400;
+    font-size: 22px;
+    line-height: 25.78px;
+    margin-left: 10px;
+}
+.font4{
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14.06px;
+}
+.card{
+    position: absolute;
+    width: 360px;
+    height: 211px;
+}
+.input{
+    height: 35px;
+    border: 0.5px solid $color-grey;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14.06px;
+    color: rgba(22, 22, 21, 1);
+
 }
 
 body{
@@ -55,8 +99,8 @@ body{
     color: $color-black-1;
 
     #d1{
-        height: 663px;
         width: 970px;
+        height: 663px;
         @extend %flex-spase-between-G;
 
         img{
@@ -66,7 +110,6 @@ body{
     }
     input[type=date], input[type=time]{
         width: 190px;
-        @extend %border;
     }
 
     input, select{
@@ -91,8 +134,28 @@ body{
     color: $color-gold;
     margin-top: 5px;
 }
+.title3{
+    font-weight: 500;
+    font-size: 32px;
+    line-height: 37.5px;
+}
+#title4{
+    font-weight: 500;
+    font-size: 22px;
+    line-height: 25.78px;
+    color:$color-red;
+}
 #d2{
     margin-top: 15px;
     color:$color-red;
     @extend %font;
+}
+#b3{
+    margin-top: 285px;
+    margin-left: 250px;
+    background-color: $color-red;
+    color:white;
+    font-weight: 400px;
+    width: 220px;
+    height: 45px;
 }
