add before and after for input

--- a/src/scss/booking_style.css
+++ b/src/scss/booking_style.css
@@ -5,15 +5,13 @@ body #d1, .flexBetween {
   justify-content: space-between;
 }
 
-body input, body select {
+body input, body select, .border {
   height: 45px;
-  border: 1px solid rgb(3, 3, 3);
-  margin-top: 20px;
   display: block;
   color: rgb(3, 3, 3);
 }
 
-#d2, .block, .b2, body input, body select {
+#d2, .block, .b2, body input, body select, .border {
   font-weight: 400;
   font-size: 18px;
   line-height: 21.09px;
@@ -83,6 +81,82 @@ body input, body select {
   color: rgb(22, 22, 21);
 }
 
+.input-style {
+  border: 1px solid rgb(3, 3, 3);
+  height: 45px;
+  width: 190px;
+}
+
+.input-style2 {
+  border: 1px solid rgb(3, 3, 3);
+  height: 45px;
+  width: 400px;
+}
+
+.mt-20 {
+  margin-top: 20px;
+}
+
+.flex-center-V {
+  display: flex;
+  align-items: center;
+}
+
+#input1::before {
+  content: url("../src/img/date.png");
+  width: 15px;
+}
+
+#input1::after {
+  content: url("../img/arrow.png");
+  width: 17px;
+}
+
+#input2::before {
+  content: url("../src/img/Time.png");
+  width: 15px;
+}
+
+#input2::after {
+  content: url("../img/arrow.png");
+  width: 17px;
+}
+
+#input3::before {
+  content: url("../src/img/name.png");
+  width: 13px;
+}
+
+#input4::before {
+  content: url("../src/img/email.png");
+  width: 15px;
+}
+
+#input5::before {
+  content: url("../src/img/tel.png");
+  width: 14px;
+}
+
+#input6::before {
+  content: url("../src/img/ballot.png");
+  width: 15px;
+}
+
+#input6::after {
+  content: url("../img/arrow.png");
+  width: 17px;
+}
+
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+select::-ms-expand {
+  display: none;
+}
+
 body {
   height: 845px;
   width: 1440px;
@@ -101,10 +175,15 @@ body #d1 img {
   height: 41px;
 }
 body input[type=date], body input[type=time] {
-  width: 190px;
+  width: 140px;
+}
+body input::-webkit-calendar-picker-indicator {
+  opacity: 0;
 }
 body input, body select {
   width: 400px;
+  border: none;
+  height: 40px;
 }
 
 #title {
