--- a/src/scss/booking_style.css
+++ b/src/scss/booking_style.css
@@ -130,6 +130,23 @@ body input, body select {
   margin-top: 5px;
 }
 
+.div1 {
+  width: 100px;
+  display: flex;
+  flex-direction: row;
+}
+
+.div2 {
+  width: 28px;
+  background-color: white;
+  height: 37px;
+  border-left: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
 #input1::before {
   content: url("../img/date.png");
   width: 15px;
@@ -197,6 +214,12 @@ body input[type=date], body input[type=time] {
 body input::-webkit-calendar-picker-indicator {
   opacity: 0;
 }
+body input[type=number]::-webkit-outer-spin-button,
+body input[type=number]::-webkit-inner-spin-button {
+  display: none;
+  -webkit-appearance: none;
+  margin: 0;
+}
 body input, body select {
   width: 340px;
   border: none;
@@ -249,4 +272,13 @@ body select {
   font-weight: 400px;
   width: 220px;
   height: 45px;
+}
+
+#border1 {
+  border: 1px solid rgb(3, 3, 3);
+  width: 370px;
+  height: 135px;
+  margin-top: 20px;
+  padding-left: 15px;
+  padding-right: 15px;
 }/*# sourceMappingURL=booking_style.css.map */
