--- a/src/scss/booking_style.scss
+++ b/src/scss/booking_style.scss
@@ -131,6 +131,23 @@ $color-grey: rgba(164, 164, 163, 1);
 .arrow{
     @extend %arrow;
 }
+
+.div1{
+    width: 100px; 
+    display: flex; 
+    flex-direction: row;
+}
+.div2{
+    width: 28px; 
+    background-color: white; 
+    height: 37px; 
+    border-left: none; 
+    display: flex; 
+    justify-content: center; 
+    align-items: center; 
+    flex-direction: column;
+}
+
 #input1::before{
     content:url('../img/date.png');
     width: 15px;
@@ -198,7 +215,12 @@ body{
     input::-webkit-calendar-picker-indicator{
         opacity: 0;
     }
-
+    input[type=number]::-webkit-outer-spin-button,
+    input[type=number]::-webkit-inner-spin-button {
+        display: none;
+        -webkit-appearance: none;
+        margin: 0; 
+    }
     input, select{
         width: 340px;
         @extend %border;
@@ -250,4 +272,7 @@ body{
     font-weight: 400px;
     width: 220px;
     height: 45px;
+}
+#border1{
+    border: 1px solid rgba(3, 3, 3, 1); width: 370px; height: 135px; margin-top: 20px; padding-left: 15px; padding-right: 15px;
 }
