--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -25,7 +25,7 @@
 @import "sections/video.scss";
 @import "sections/gallery.scss";
 @import "sections/tickets.scss";
-// @import "sections/main/tickets/form";
+@import "sections/booking.scss";
 // @import "sections/main/tickets/form---overview";
 @import "sections/parallax.scss";
 @import "sections/contacts";
