--- a/src/scss/sections/tickets.scss
+++ b/src/scss/sections/tickets.scss
@@ -183,11 +183,12 @@
         }
         &__cost{
             margin-top: 50px;
+            margin-left: 50px;
         }
         &__button{
             margin-top: 82px;
         }
-        &__text-18, &__text-65, &__cost{
+        &__text-18, &__text-65{
             margin-left: 23px;
         }
         &__div-radio{
@@ -236,6 +237,7 @@
     }
     &__subtitle{
         font-weight: var(--typography-fontWeightMedium);
+        font-family: var(--typography-fontFamily);
     }
     &__button{
         background-color: var(--palette-primary-main);
@@ -244,10 +246,11 @@
         width: 175px;
         height: 50px;
         letter-spacing: 2px;
-        text-align: center;
         cursor: pointer;
+        @extend %flex-center-V;
+        @extend %flex-center-G;        
     }
-    &__subtitle, &__text, &__button, &__border{
+    &__text, &__button, &__border{
         font-family: var(--typography-fontFamily);
         font-weight: var(--typography-fontWeightLight);
     }
@@ -267,5 +270,101 @@
         font-size: 32px;
         line-height: 37.5px;
         cursor: pointer;
+    }
+}
+.modal-checkbox{
+    cursor: pointer;
+    overflow: hidden;
+    z-index: 1;
+    position: relative;
+}
+
+// .modal-checkbox:before {
+//     content: '';
+//     position: absolute;
+//     top: 0;
+//     right: -50px;
+//     bottom: 0;
+//     left: 0;
+//     border-right: 50px solid transparent;
+//     border-top: 50px solid #2D6B9F;
+//     transition: transform 0.5s;
+//     transform: translateX(-100%);
+//     z-index: -1;
+// }
+// .modal-checkbox:hover:before,
+// .modal-checkbox:active:before,
+// .modal-checkbox:focus:before {
+//     transform: translateX(0);
+// }
+
+#modal-checkbox{
+    display: none;
+}
+/* Контейнер, который затемняет страницу */
+#modal-checkbox + .booking {
+    display: none;
+}
+#modal-checkbox:checked + .booking {
+    display:flex;
+    align-items:center;
+    justify-content:center;    
+    z-index: 4;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    animation: bg 0.5s ease;
+    background: var(--palette-primary-light);
+}
+/* Модальное окно */
+#modal-checkbox:checked + .booking .booking__container {
+    font-family: Verdana, sans-serif;  
+    font-size: 16px;
+    padding: 20px;
+    width:80%;
+    max-width: 600px;
+    max-height: 70%;
+    transition: 0.5s;
+    border: 6px solid #BFE2FF;
+    border-radius: 12px;
+    background: #FFF;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.2), 0 16px 20px rgba(0,0,0,0.2);
+    text-align: center;
+    overflow: auto;
+    animation: scale 0.5s ease;
+}
+
+/* Кнопка с крестиком закрывающая окно */
+.booking__button {
+    position: absolute;
+    z-index: 10;
+    animation: move 0.5s ease;
+    cursor: pointer;
+}
+/* Анимации */
+@keyframes scale {
+    0% {
+        transform: scale(0);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+@keyframes move {
+    0% {
+        right: -80px;
+    }
+    100% {
+        right: 20px;
+    }
+}
+@keyframes bg {
+    0% {
+        background: rgba(51, 122, 183, 0);
+    }
+    100% {
+        background: rgba(51, 122, 183, 0.7);
     }
 }
