--- a/src/html/includes/main/tickets.html
+++ b/src/html/includes/main/tickets.html
@@ -42,9 +42,12 @@
     </div>
 </section>
 
+<!-- Modal window -->
+
 <input type="checkbox" id="modal-checkbox"/>
+<div class="booking-background">
 <section class="booking">
-    <button type="button" class="booking__button"></button>
+    <label for="modal-checkbox" class="booking__button"></label>
     <div class="booking__container">
         <div class="booking__div-left">
             <img class="bookimg__logo" src="../../../img/form/logo.png" alt="logo.png">
@@ -177,3 +180,4 @@
         </div>
     </div>
 </section>
+</div>
