--- a/src/html/includes/main/booking.html
+++ b/src/html/includes/main/booking.html
@@ -1,6 +1,7 @@
 <input type="checkbox" id="modal-checkbox"/>
+<div class="booking-background">
 <section class="booking">
-    <button type="button" class="booking__button"></button>
+    <label for="modal-checkbox" class="booking__button"></label>
     <div class="booking__container">
         <div class="booking__div-left">
             <img class="bookimg__logo" src="../../../img/form/logo.png" alt="logo.png">
@@ -133,3 +134,4 @@
         </div>
     </div>
 </section>
+</div>
