--- a/src/scss/sections/tickets.scss
+++ b/src/scss/sections/tickets.scss
@@ -246,9 +246,7 @@
         width: 175px;
         height: 50px;
         letter-spacing: 2px;
-        cursor: pointer;
-        @extend %flex-center-V;
-        @extend %flex-center-G;        
+        cursor: pointer;       
     }
     &__text, &__button, &__border{
         font-family: var(--typography-fontFamily);
@@ -277,6 +275,11 @@
     overflow: hidden;
     z-index: 1;
     position: relative;
+    border-radius: 4px;
+    width: 175px;
+    height: 50px;
+    @extend %flex-center-V;
+    @extend %flex-center-G; 
 }
 
 // .modal-checkbox:before {
@@ -302,10 +305,10 @@
     display: none;
 }
 /* Контейнер, который затемняет страницу */
-#modal-checkbox + .booking {
+#modal-checkbox + .booking-background {
     display: none;
 }
-#modal-checkbox:checked + .booking {
+#modal-checkbox:checked + .booking-background {
     display:flex;
     align-items:center;
     justify-content:center;    
@@ -316,31 +319,32 @@
     width: 100%;
     height: 100%;
     animation: bg 0.5s ease;
-    background: var(--palette-primary-light);
+    background: rgba(3, 3, 3, 0.7);
 }
 /* Модальное окно */
-#modal-checkbox:checked + .booking .booking__container {
-    font-family: Verdana, sans-serif;  
-    font-size: 16px;
-    padding: 20px;
-    width:80%;
-    max-width: 600px;
+#modal-checkbox:checked + .booking-background .booking{
+    @include media-breakpoint-up(xl){
+        width: 75%;
+    }
+    @include media-breakpoint-between(md, xl){
+        width: 100%
+    };
+    @include media-breakpoint-between(sm, md){
+        width: 76.82%;
+    }
+    @include media-breakpoint-down(sm){
+        width: 100%;
+    }
     max-height: 70%;
     transition: 0.5s;
-    border: 6px solid #BFE2FF;
-    border-radius: 12px;
-    background: #FFF;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.2), 0 16px 20px rgba(0,0,0,0.2);
-    text-align: center;
     overflow: auto;
     animation: scale 0.5s ease;
+    background-color: var(--palette-primary-light);
 }
 
 /* Кнопка с крестиком закрывающая окно */
 .booking__button {
-    position: absolute;
     z-index: 10;
-    animation: move 0.5s ease;
     cursor: pointer;
 }
 /* Анимации */
@@ -352,19 +356,11 @@
         transform: scale(1);
     }
 }
-@keyframes move {
-    0% {
-        right: -80px;
-    }
-    100% {
-        right: 20px;
-    }
-}
 @keyframes bg {
     0% {
         background: rgba(51, 122, 183, 0);
     }
     100% {
-        background: rgba(51, 122, 183, 0.7);
+        background: rgba(3, 3, 3, 0.7);
     }
 }
